# docs/swagger.json
@@ -7037,11 +7037,6 @@
         },
         "/o/refresh-token": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "produces": [
                     "application/json"
                 ],
