# router/auth/auth.go
@@ -9,7 +9,7 @@ import (
 
 func SetupRoutes(router fiber.Router) {
     router.Post("/o/token", auth.Login)
-    router.Post("/o/refresh-token", middleware.JWTProtected, auth.Refresh)
+    router.Post("/o/refresh-token", auth.Refresh)
     router.Get("/api/current-user", middleware.JWTProtected, auth.UserDetails)
     router.Post("/api/change-password", middleware.JWTProtected, auth.ChangePassword)
 }
